--- a/Primitives de fonctions rationnelles.tex
+++ b/Primitives de fonctions rationnelles.tex
@@ -42,7 +42,7 @@ On fait appara\^itre la d\'eriv\'ee du d\'enominateur au num\'erateur. Pour $x \
 	&= \frac{\lambda}{2} \frac{(2x + b) + \frac{2\mu}{\lambda} - b}{x^2+bx+c}\\
 	&= \frac{\lambda}{2} \left(\frac{2x+b}{x^2+bx+c} + \frac{\frac{2\mu}{\lambda} - b}{x^2+bx+c}\right)
 \end{align*}
-On conna\^it la primitive de $x \mapsto \frac{2x+b}{x^2+bx+c}$ reste dont \`a trouver une primitive de $x \mapsto \frac{1}{x^2 + bx + c}$\\
+On conna\^it la primitive de $x \mapsto \frac{2x+b}{x^2+bx+c}$ reste donc \`a trouver une primitive de $x \mapsto \frac{1}{x^2 + bx + c}$\\
 Pour $x \in \mathbb{R}$ \begin{align*}
 	x^2 + bx + c &= (x+\frac{b}{2})^2 + c - \frac{b^2}{4}\\
 	&= (x + \frac{b}{2})^2 + \underset{\omega^2 \in \mathbb{R}^*}{\frac{4c - b^2}{4}}\\
