--- a/Séries.tex
+++ b/Séries.tex
@@ -143,7 +143,7 @@ convergente.
 %Séries de référence {{{1
 \section{S\'eries de r\'ef\'erence}
 \begin{enumerate}
-	\item S\'erie g\'eom\'etrique: $\sum q^n$ converge $\Leftrightarrow |q| < 1$
+	\item S\'erie g\'eom\'etrique: $q \in \mathbb{C}$,  $\sum q^n$ converge $\Leftrightarrow |q| < 1$
 	\item S\'eries de Riemann: soit $\alpha \in \mathbb{R}$ alors,\\
 		$\sum_{n \in \mathbb{N}^*} \frac{1}{n^\alpha} < +\infty \Leftrightarrow \alpha > 1$ \\
 		De plus, $R_n \sim \frac{1}{\alpha -1} \frac{1}{n^{\alpha -1}}$
