--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -277,6 +277,7 @@ Soit $E$ un Kev. $F$ et $G$ deux sev de $E$ tels que: $E = F \oplus G$. Tout $x 
 \begin{enumerate}
 	\item Quand il y a des hyperplans, penser \`a prendre des vecteurs en dehors puis \`a utiliser la suppl\'ementarit\'e
 	\item On peut montrer suppl\'ementarit\'e de $F,G$ en montrant que $\dim (F\cap G) = 0$
+	\item D\'ecomposition foncions paire/impaire: \[f(x) = \frac{f(x) + f(-x)}{2} + \frac{f(x) - f(-x)}{2}\]
 \end{enumerate}
 
 \end{document}
