--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -92,6 +92,10 @@
 		$f(x) =  a_0 + a_1(x-x_0) + \hdots + a_n(x-x_0)^n + o((x-x_0)^n)$ \\
 		On suppose qu'au moins un des $a_i$ n'est pas nul. Soit $p$ le minimum de l'ensemble des $a_i$ non nuls. \\
 		Alors $f(x) \underset{x_0}{\sim} a_p(x-x_0)^p$
+	\item D\'etermination de d\'eveloppements asymptotiques en $\infty$:\\
+		On dit que $f$ poss\`ede un DL d'ordre $n$ au voisinage de $\infty$ si la fonction compos\'ee $g(x)=f(1/x)$ poss\`ede un DL d'ordre $n$ au
+		voisinage de $0$ \\
+		C'est \`a dire pour $f(n)$ on pose $x=1/n$ donc $n=1/x$, on fait le changement de variable, le DL en $0$ puis on revient au $n$
 	\item Recherche d'asymptotes en $\infty$\\
 		Pour trouver une aymptote de $f$ on essaie de faire un developpement asymptotique de $x \mapsto \frac{f(x)}{x}$ au $V(+\infty)$,
 		ce qui revient \`a faire un $DL(0)$ de $\varphi \mapsto h f(\frac{1}{h})$. \\
