--- a/Polynômes.tex
+++ b/Polynômes.tex
@@ -163,6 +163,7 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 \begin{theo} Polyn\^omes interpolateurs de Lagrange \\
 	Soit $n\in \mathbb{N}$, $x_0, \hdots, x_n$ distincts dans $K$, $y_0, \hdots, y_n$ quelconques. Alors il existe un unique $P \in K[X]$
 	de degr\'e $\leq n$, tel que $\tilde{P}(x_i) = y_i$
+	\[L_i =\prod_{j\neq i} \frac{X-x_j}{x_i - x_j}\]
 \end{theo}
 
 \subsection{Racines multiples}
