--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -8,6 +8,7 @@
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
 \theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
+\theoremstyle{remark} \newtheorem*{rqs}{Remarques}
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
@@ -121,6 +122,10 @@ De plus, si \(f\) d\'erivable sur \(I\), \\
 soit \(x_0 \in I\ et\ y_0 = f(x_0) \in J\). Si \(f'(x_0) \neq 0 \) alors \(g\) est d\'erivable en \(y_0\) et
 \(g'(y_0) = \frac{1}{f'(x_0)} = \frac{1}{f'(g(y_0))}\) \\
 
+\begin{rqs}
+	Si $f \in C^{\infty}$ et $f'$ ne s'annule pas, $f^{-1}$ est aussi $C^{\infty}$
+\end{rqs}
+
 \subsection{Arcsin}
 \(Arcsin: [-1,1] \rightarrow [-\frac{\Pi}{2}, \frac{\Pi}{2}]\) \\
 \(\arcsin\) est impaire, continue et strictement croissante \\
@@ -144,6 +149,7 @@ Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
 	\item Aplitude/phase \\
 		Soient $\lambda, \mu \in \mathbb{R}$, il existe $A \geq 0,\ \varphi \in \mathbb{R}$ tels que:
 		\[\forall t \in \mathbb{R},\ \lambda \cos t + \mu \sin t = A\cos(t - \varphi)\]
+		Avec $A = \sqrt{\lambda^2 + \mu^2}$
 \end{enumerate}
 
 \end{document}
