calcul inverse matrice

--- a/Matrices.tex
+++ b/Matrices.tex
@@ -234,6 +234,13 @@ M_{ij}$ est la i\`eme coordonn\'e de $e_j'$ dans $\mathscr{B}$
 	Ainsi, la trace de $f$ est alors la trace de $Mat_{\mathscr{B}}(f)$ o\`u $\mathscr{B}$ est une base qlq de $E$
 \end{theo}
 
+%Calcul inverse {{{1
+\section{Calcul de l'inverse par syst\`eme d'\'equations}
+On \'ecrit le syst\`eme: \[A \begin{pmatrix} x \\ y \\ z \end{pmatrix} = \begin{pmatrix} a \\ b \\ c \end{pmatrix}\]
+
+On peut alors le r\'esoudre (en $x,y,z$) ce qui donnera la valeur de $A^{-1}$ car
+\[\begin{pmatrix} x \\ y \\ z \end{pmatrix} = A^{-1} \begin{pmatrix} a \\ b \\ c \end{pmatrix}\]
+
 %Remaques {{{1
 \section{Remarques}
 
