Fonctions hyperboliques réciproques

--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -141,6 +141,22 @@ Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
 \(\arctan\) est impaire continue et strictement croissante \\
 Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
 
+%Fonctions hyperboliques réciproques {{{1
+\section{Fonctions hyperboliques r\'eciproques}
+\subsection{Argsinh}
+\(Argsinh: \mathbb{R} \rightarrow \mathbb{R} \) \\
+$\forall x \in \mathbb{R},\ $argsh$(x) = \ln(x + \sqrt{x^2 +1})$ \\
+argsh$'(x) = \frac{1}{\sqrt{x^2+1}}$
+
+\subsection{Argcosh}
+\(Argcosh: [1, +\infty[ \rightarrow [0,+\infty[ \) \\
+$\forall x \in ]1,+\infty[,\  $argch$(x) = \ln(x + \sqrt{x^2-1})$ \\
+argch$'(x) = \frac{1}{\sqrt{x^2-1}}$
+
+\subsection{Argtanh}
+\(Argtanh: ]-1,1[ \rightarrow \mathbb{R} \) \\
+$\forall x \in ]-1,1[,\ $argth$(x) = \frac{1}{2} \ln(\frac{1+x}{1-x})$ \\
+argth$'(x) = \frac{1}{1-x^2}$
 %Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
