--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -126,37 +126,43 @@ soit \(x_0 \in I\ et\ y_0 = f(x_0) \in J\). Si \(f'(x_0) \neq 0 \) alors \(g\) e
 	Si $f \in C^{\infty}$ et $f'$ ne s'annule pas, $f^{-1}$ est aussi $C^{\infty}$
 \end{rqs}
 
-\subsection{Arcsin}
-\(Arcsin: [-1,1] \rightarrow [-\frac{\Pi}{2}, \frac{\Pi}{2}]\) \\
-\(\arcsin\) est impaire, continue et strictement croissante \\
-Pour \(y \in ]-1,1[, \arcsin'(y) = \frac{1}{\sqrt{1-y^2}}\) \\
+\begin{defi} $ $
+	\begin{enumerate}
+	\item Arc sinus: \\
+	\(Arcsin: [-1,1] \rightarrow [-\frac{\Pi}{2}, \frac{\Pi}{2}]\) \\
+	\(\arcsin\) est impaire, continue et strictement croissante \\
+	Pour \(y \in ]-1,1[, \arcsin'(y) = \frac{1}{\sqrt{1-y^2}}\)
 
-\subsection{Arccos}
-\(Arccos: [-1,1] \rightarrow [0, \Pi]\) \\
-\(\arcsin\) est continue et strictement d\'{e}croissante \\
-Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
+	\item Arc cosinus: \\
+	\(Arccos: [-1,1] \rightarrow [0, \Pi]\) \\
+	\(\arcsin\) est continue et strictement d\'{e}croissante \\
+	Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\)
 
-\subsection{Arctan}
-\(Arctan: \mathbb{R} \rightarrow [-\frac{\Pi}{2},\frac{\Pi}{2}]\) \\
-\(\arctan\) est impaire continue et strictement croissante \\
-Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
+	\item Arc tangente: \\
+	\(Arctan: \mathbb{R} \rightarrow [-\frac{\Pi}{2},\frac{\Pi}{2}]\) \\
+	\(\arctan\) est impaire continue et strictement croissante \\
+	Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\)
+	\end{enumerate}
+\end{defi}
 
 %Fonctions hyperboliques réciproques {{{1
 \section{Fonctions hyperboliques r\'eciproques}
-\subsection{Argsinh}
+\begin{enumerate}
+\item Argument sinus hyperbolique: \\
 \(Argsinh: \mathbb{R} \rightarrow \mathbb{R} \) \\
 $\forall x \in \mathbb{R},\ $argsh$(x) = \ln(x + \sqrt{x^2 +1})$ \\
 argsh$'(x) = \frac{1}{\sqrt{x^2+1}}$
 
-\subsection{Argcosh}
+\item Argument cosinus hyperbolque: \\
 \(Argcosh: [1, +\infty[ \rightarrow [0,+\infty[ \) \\
 $\forall x \in ]1,+\infty[,\  $argch$(x) = \ln(x + \sqrt{x^2-1})$ \\
 argch$'(x) = \frac{1}{\sqrt{x^2-1}}$
 
-\subsection{Argtanh}
+\item Argument tangente hyperbolique: \\
 \(Argtanh: ]-1,1[ \rightarrow \mathbb{R} \) \\
 $\forall x \in ]-1,1[,\ $argth$(x) = \frac{1}{2} \ln(\frac{1+x}{1-x})$ \\
 argth$'(x) = \frac{1}{1-x^2}$
+\end{enumerate}
 %Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
