--- a/Probabilités.tex
+++ b/Probabilités.tex
@@ -45,7 +45,7 @@ On dit ainsi que $(\Omega,P)$ est un espace probabilis\'e. Les \'el\'ements de $
 \begin{prop} Soit $(\Omega, P)$ un espace probabilis\'e
 	\begin{itemize}
 		\item [-] $P(\emptyset) = 0$
-		\item [-] Si $A_1, \hdots, A_n$ sont imcompatibles deux \`a deux, $P(\bigcup A_i) = \sum P(A_i)$
+		\item [-] Si $A_1, \hdots, A_n$ sont incompatibles deux \`a deux, $P(\bigcup A_i) = \sum P(A_i)$
 		\item [-] $P(\bar{A}) = 1 - P(A)$
 		\item [-] Si $\{B_1, \hdots, B_n\}$ est un syst\`eme complet d'\'ev\'enements (si $\bigcup B_i = \Omega$ et $B_i \cap B_j = \emptyset$)
 			alors pour tout $A \in \mathcal{P}(\Omega)$, $P(A) = \sum P(A \cap B_i)$
