--- a/Probabilités.tex
+++ b/Probabilités.tex
@@ -228,7 +228,7 @@ P_2(\{\omega_2\})$
 \end{prop}
 
 \begin{prop}
-	$X:\Omega \rightarrow \mathbb{R},\ \alpha, \beta \in \mathbb{R}$, alors $V(\alpha X + Y) = \alpha^2 V(X)$
+	$X:\Omega \rightarrow \mathbb{R},\ \alpha, \beta \in \mathbb{R}$, alors $V(\alpha X + \beta) = \alpha^2 V(X)$
 \end{prop}
 
 \begin{defi} Soit $X$ une va r\'eelle:
