--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -197,6 +197,10 @@ Dans la suite $E$ est un Kev.
 	\end{enumerate}
 \end{defi}
 
+\begin{rqs}
+Une sous alg\`ebre de $A$ est une partie $B$ de $A$ telle que $1 \in B$ et qui est stable pour chacune des trois lois ($\forall (u,v) \in B^2,\ \forall \lambda in K,\ u+v \in B, u \times v \in B \lambda u \in B$)
+\end{rqs}
+
 \begin{prop} $ $
 	\begin{itemize}
 		\item [-] $E,F$ deux Kev. Alors $\mathscr{L}(E,F)$ est un sev de $\mathscr{F}(E,F)$
