--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -198,7 +198,7 @@ Dans la suite $E$ est un Kev.
 \end{defi}
 
 \begin{rqs}
-Une sous alg\`ebre de $A$ est une partie $B$ de $A$ telle que $1 \in B$ et qui est stable pour chacune des trois lois ($\forall (u,v) \in B^2,\ \forall \lambda in K,\ u+v \in B, u \times v \in B \lambda u \in B$)
+Une sous alg\`ebre de $A$ est une partie $B$ de $A$ telle que $1 \in B$ et qui est stable pour chacune des trois lois ($\forall (u,v) \in B^2,\ \forall \lambda \in K,\ u+v \in B, u \times v \in B,\  \lambda u \in B$)
 \end{rqs}
 
 \begin{prop} $ $
