--- a/Probabilités.tex
+++ b/Probabilités.tex
@@ -133,6 +133,10 @@ P_2(\{\omega_2\})$
 			Une va $Y$ suit la loi binomiale de param\`etre $n$ et $p$ lorsque $Y(\Omega) = [\![0,n]\!]$ et $\forall k \in [\![0,n]\!],\
 			P(X=k) = \binom{n}{k} p^k (1-p)^{n-k}$\\
 			On \'ecrit $Y \hookrightarrow B(n,p)$
+
+			\begin{rqs}
+				$E(X) = np,\ V(X) = np(1-p)$
+			\end{rqs}
 		\item Loi uniforme \\
 			$X: \Omega \rightarrow E$ suit une loi uniforme sur $E$ si $\forall x \in E,\ P(X = x) = \frac{1}{|E|}$
 	\end{enumerate}
