--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -133,7 +133,7 @@ Q(x)\exp(\alpha x)$ \\ $P: aX^2 + bX + c$ le poly\^ome caract\'eristique de $(E_
 %Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
-	\item On raisonne souvent par analyse-synth\`ese il est donc important de v\'erifier les r\'ecriproques
+	\item On raisonne souvent par analyse-synth\`ese il est donc important de v\'erifier les r\'eciproques
 	\item Pour les $EDL_2$ de la forme $ax^2y'' + bxy' + cy = 0$, on peut parfois se ramener \`a une \'equation \`a coefficients constants en composant par $e^t$
 	\item Dans $EDL_2$, s'il y a des $\cos$, on peut passer en exponnentielle complexe. Dans ce cas: \\
 		Si $\psi: \mathbb{R} \rightarrow \mathbb{C}$ est solution de $E_\mathbb{C}$, alors $Re(\psi)$ est solution de $(E)$
