--- a/Polynômes.tex
+++ b/Polynômes.tex
@@ -164,6 +164,7 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 	Soit $n\in \mathbb{N}$, $x_0, \hdots, x_n$ distincts dans $K$, $y_0, \hdots, y_n$ quelconques. Alors il existe un unique $P \in K[X]$
 	de degr\'e $\leq n$, tel que $\tilde{P}(x_i) = y_i$
 	\[L_i =\prod_{j\neq i} \frac{X-x_j}{x_i - x_j}\]
+	Donc le polyn\^ome cherch\'e est $\sum y_i L_i$
 \end{theo}
 
 \subsection{Racines multiples}
