--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -23,7 +23,7 @@
 
 %Généralités {{{1
 \section{G\'en\'eralit\'es}
-Une \'equation diff\'erenielle est une \'ecriure du type:
+Une \'equation diff\'erenielle est une \'ecriture du type:
 \[F(t, y, y', \hdots, y^{(n)}) = 0\]
 F une application de $I \times \Omega$ dans $\mathbb{R}$ avec I intervalle de $\mathbb{R}$, $\Omega$ partie de $\mathbb{R}^{n+1}$\\
 Une solution est par d\'efinition une application continue $f:J\rightarrow \mathbb{R}$, n fois d\'erivable telle que:
