--- a/Fractions rationnelles.tex
+++ b/Fractions rationnelles.tex
@@ -99,7 +99,7 @@ Pour $F = \frac{A}{B}, G = \frac{C}{D} \in K(X)$:
 	\item Regarder parit\'e des fonctions
 	\item Si $F \in R(X),\ z \in \mathbb{C} \backslash \mathbb{R}$ un p\^ole alors $\bar{z}$ est aussi p\^ole de $F$ de m\^eme ordre. Ce qui
 		permet de trouver plus simplement certaines constantes
-	\item Pour trouver les constantes dans $\mathbb{R}$, il peut \^etre utile d'\'evaluer le polyn\^ome sur certaines valeures.\\ On peut
+	\item Pour trouver les constantes dans $\mathbb{R}$, il peut \^etre utile d'\'evaluer le polyn\^ome sur certaines valeurs.\\ On peut
 		\'egalement multiplier par $X^\alpha$ puis regarder les limites en $\infty$
 \end{enumerate}
 
